samples/_failures_safe/1761212539_ca8115_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd88ec9e.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_bd88ec9e.c:125:5: error: expected identifier at end of input
  125 |     printf("Total entries: %zu\n", heap->
      |     ^~~~~~
./samples/SAFE/__tmp_bd88ec9e.c:125:5: error: expected declaration or statement at end of input
